infer/tests/codetoanalyze/objc/errors/memory_leaks_benchmark/arc_methods.dot
/* @generated */
digraph iCFG {
15 [label="15:  DeclStmt \n   n$3=_fun_ArcMethodsA_newA() [line 42]\n  *&a1:class ArcMethodsA *=n$3 [line 42]\n " shape="box"]
	

	 15 -> 14 ;
14 [label="14:  DeclStmt \n   n$2=*&a1:class ArcMethodsA * [line 43]\n  _fun___objc_retain(n$2:class ArcMethodsA *) [line 43]\n  *&aa:class ArcMethodsA *=n$2 [line 43]\n " shape="box"]
	

	 14 -> 13 ;
13 [label="13:  DeclStmt \n   n$1=_fun_ArcMethodsA_someA() [line 44]\n  _fun___objc_retain(n$1:class ArcMethodsA *) [line 44]\n  *&a2:class ArcMethodsA *=n$1 [line 44]\n " shape="box"]
	

	 13 -> 12 ;
12 [label="12:  DeclStmt \n   n$0=*&a2:class ArcMethodsA * [line 45]\n  _fun___objc_retain(n$0:class ArcMethodsA *) [line 45]\n  *&ab:class ArcMethodsA *=n$0 [line 45]\n " shape="box"]
	

	 12 -> 11 ;
11 [label="11:  Return Stmt \n   *&return:int =0 [line 46]\n " shape="box"]
	

	 11 -> 10 ;
10 [label="10: Exit main_arc_methods \n  " color=yellow style=filled]
	

9 [label="9: Start main_arc_methods\nFormals: \nLocals:  ab:class ArcMethodsA * a2:class ArcMethodsA * aa:class ArcMethodsA * a1:class ArcMethodsA * \n   DECLARE_LOCALS(&return,&ab,&a2,&aa,&a1); [line 35]\n " color=yellow style=filled]
	

	 9 -> 15 ;
8 [label="8:  DeclStmt \n   n$5=_fun___objc_alloc_no_fail(sizeof(class ArcMethodsA ):unsigned long ) [line 28]\n  n$6=_fun_NSObject_init(n$5:class ArcMethodsA *) virtual [line 28]\n  *&a:class ArcMethodsA *=n$6 [line 28]\n " shape="box"]
	

	 8 -> 7 ;
7 [label="7:  Return Stmt \n   n$3=*&a:class ArcMethodsA * [line 30]\n  *&return:class ArcMethodsA *=n$3 [line 30]\n  n$4=_fun___set_autorelease_attribute(n$3:class ArcMethodsA *) [line 30]\n " shape="box"]
	

	 7 -> 6 ;
6 [label="6: Exit ArcMethodsA_someA \n  " color=yellow style=filled]
	

5 [label="5: Start ArcMethodsA_someA\nFormals: \nLocals:  a:class ArcMethodsA * \n   DECLARE_LOCALS(&return,&a); [line 27]\n " color=yellow style=filled]
	

	 5 -> 8 ;
4 [label="4:  DeclStmt \n   n$1=_fun___objc_alloc_no_fail(sizeof(class ArcMethodsA ):unsigned long ) [line 23]\n  n$2=_fun_NSObject_init(n$1:class ArcMethodsA *) virtual [line 23]\n  *&a:class ArcMethodsA *=n$2 [line 23]\n " shape="box"]
	

	 4 -> 3 ;
3 [label="3:  Return Stmt \n   n$0=*&a:class ArcMethodsA * [line 24]\n  *&return:class ArcMethodsA *=n$0 [line 24]\n " shape="box"]
	

	 3 -> 2 ;
2 [label="2: Exit ArcMethodsA_newA \n  " color=yellow style=filled]
	

1 [label="1: Start ArcMethodsA_newA\nFormals: \nLocals:  a:class ArcMethodsA * \n   DECLARE_LOCALS(&return,&a); [line 22]\n " color=yellow style=filled]
	

	 1 -> 4 ;
}
